--- a/code/main.css
+++ b/code/main.css
@@ -1,13 +1,3 @@
-@media (min-width: 500px) {
-  .header-navbar a{
-    display: flex;
-  }
-
-  .btn-online {
-    display: flex;
-  }
-}
-
 html,
 body {
   margin: 0;
@@ -15,6 +5,7 @@ body {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 * {
@@ -31,7 +22,7 @@ body {
 }
 
 .header-container {
-  width: 100%;
+  width: 100vw;
   height: 144px;
   display: flex;
   flex-direction: row;
@@ -56,17 +47,35 @@ body {
   margin-top: 25px;
 }
 
+@media (min-width: 900px) {
+  .header-title {
+    font-size: 40px;
+    width: fit-content;
+    margin-top: 61px;
+  }
+}
+
 .header-navbar {
+  display: flex;
+  display: none;
   flex-direction: row;
   align-items: center;
-  display: none;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  margin-bottom: 22px;
+  width: 60%;
+}
+
+@media (min-width: 900px) {
+  .header-navbar {
+    display: flex;
+  }
 }
 
 .header-navbar a {
   font-size: 24px;
   font-weight: 700;
   color: white;
+  text-decoration: none;
 }
 
 .header-links:hover {
@@ -75,15 +84,37 @@ body {
 
 .container-hacker {
   width: 100%;
-  height: 274px;
+  height: 284px;
+  background-image: url(/media/hacker1x.png);
+  background-size: cover;
+}
+
+@media (min-width: 745px) {
+  .container-hacker {
+    height: 350px;
+  }
+}
+@media (min-width: 900px) {
+  .container-hacker {
+    height: 400px;
+  }
+}
+@media (min-width: 1280px) {
+  .container-hacker {
+    height: 468px;
+  }
+}
+@media (min-width: 1920px) {
+  .container-hacker {
+    height: 600px;
+  }
 }
 
 .img-hacker {
-  width: 100%;
   object-fit: cover;
 }
 
-.links-challenges {
+.container-links {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -176,6 +207,16 @@ body {
   overflow-x: scroll;
   gap: 37px;
   margin-bottom: 10px;
+}
+
+.scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 .box-one {
@@ -352,6 +393,13 @@ body {
   object-fit: cover;
 }
 
+.challenges {
+  margin-top: 0;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 0;
+}
+
 .title-chall {
   font-size: 32px;
   font-weight: 700;
@@ -362,7 +410,7 @@ body {
   font-weight: 400;
 }
 
-.button-book {
+.button-chall {
   background-color: #E3170A;
   color: white;
   font-size: 24px;
@@ -371,8 +419,75 @@ body {
   border-radius: 4px;
   border: none;
   margin-top: 35px;
-  margin-bottom: 64px;
+  margin-bottom: 98px;
 }
+
+.footer {
+  background-color: #011827;
+  height: fit-content;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.container-footer {
+  height: 566px;
+  margin-top: 64px;
+  margin-left: 22px;
+}
+
+.footer-title-box {
+  margin-bottom: 0px;
+}
+
+.footer-title {
+  font-size: 18px;
+  font-weight: 700;
+  color: white;
+}
+
+.footer-title-p {
+  font-size: 18px;
+  font-weight: 400;
+  color: white;
+}
+
+.footer-site-map {
+  display: flex;
+  flex-direction: column;
+  margin: 0px;
+
+}
+
+.footer-play {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+.footer-follow-us {
+  display: flex;
+  flex-direction: column;
+  margin: 0px;
+}
+
+.footer-link-title {
+  font-size: 18px;
+  font-weight: 700;
+  color: white;
+}
+
+.footer-links {
+  font-size: 18px;
+  font-weight: 400;
+  color: white;
+  text-decoration: none;
+}
+
+
+
+
+
 
 
 
