--- a/main.css
+++ b/main.css
@@ -46,13 +46,7 @@ body {
   margin-top: 25px;
 }
 
-@media (min-width: 900px) {
-  .header-title {
-    font-size: 40px;
-    width: fit-content;
-    margin-top: 61px;
-  }
-}
+
 
 .header-navbar {
   display: flex;
@@ -64,10 +58,9 @@ body {
   width: 60%;
 }
 
+
 @media (min-width: 900px) {
-  .header-navbar {
-    display: flex;
-  }
+  
 }
 
 .header-navbar a {
@@ -80,29 +73,52 @@ body {
 .header-links:hover {
   color: #8acfe5;
 }
-/* -- MAIN -- */
+
+@media (min-width: 900px) {
+  .header-title {
+    font-size: 40px;
+    width: fit-content;
+    margin-top: 61px;
+  }
+
+  .header-navbar {
+    display: flex;
+  }
+}
+
+                                                /* -- MAIN -- */
 
 /* -- SEC-HERO -- */
 .container-hacker {
   width: 100%;
-  height: 284px;
-  background-image: url(/media/hacker1x.png);
+  height: 274px;
+  background-image: url(/media/hacker4x.png);
   background-size: cover;
 }
 
-@media (min-width: 745px) {
+@media (min-width: 750px) {
   .container-hacker {
-    height: 350px;
+    height: 352px;
+    
   }
 }
 @media (min-width: 900px) {
   .container-hacker {
     height: 400px;
+    background-image: url(/media/hacker3x.png);
+    
+  }
+}
+@media (min-width: 1000px) {
+  .container-hacker {
+    height: 440px;
+    background-image: url(/media/hacker2x.png);
   }
 }
 @media (min-width: 1280px) {
   .container-hacker {
     height: 468px;
+    background-image: url(/media/hacker2x.png);
   }
 }
 @media (min-width: 1920px) {
