klar med layout

--- a/main.css
+++ b/main.css
@@ -7,6 +7,12 @@ body {
   overflow-x: hidden;
 }
 
+@media (min-width: 1920px) {
+  body {
+    
+  }
+}
+
 * {
   font-family: Roboto, sans-serif;
 }
@@ -63,7 +69,7 @@ body {
   text-decoration: none;
 }
 
-.header-links:hover {
+.header-navbar a:hover {
   color: #8acfe5;
 }
 
@@ -210,7 +216,7 @@ body {
 }
 
 .cont-quotes-text {
-  margin-right: 30px;
+  margin-right: 25px;
 }
 
 .quote-text {
@@ -240,6 +246,7 @@ body {
   .quote-two {
     display: flex;
     width: 522px;
+    margin-left: 30px;
   }
 }
 
@@ -474,14 +481,12 @@ body {
 }
 
 .img-play-one {
-  width: 100%;
-  max-width: 100%;
+  
   object-fit: cover;
 }
 
 .img-play-two {
-  width: 100%;
-  max-width: 100%;
+  
   object-fit: cover;
 }
 
@@ -533,9 +538,114 @@ body {
   border-radius: 4px;
   border: none;
 }
+@media (min-width: 700px) {
+  .img-play-one {
+   max-height: 489px;
+  }
+
+  .img-play-two {
+    max-height: 489px;
+
+  }
+}
+@media screen and (min-width: 900px) {
+  .play-container-one {
+    flex-direction: row;
+    margin-bottom: 0px;
+  }
+  
+  .play-container-two {
+    flex-direction: row-reverse;
+    margin-bottom: 116px;
+  }
+
+  .content-play-one {
+    padding-top: 30px;
+    padding-right: 100px;
+    width: 50vw;
+    padding-left: 62px;
+    padding-bottom: 4rem;
+  }
+
+  .content-play-two {
+    padding-top: 30px;
+    padding-right: 100px;
+    width: 50%;
+    padding-left: 62px;
+    padding-bottom: 4rem;
+  }
+
+  .img-play-one {
+    max-height: 1000px;
+    width: 50%;
+    max-width: 50%;
+  }
+
+  .img-play-two {
+    max-height: 1000px;
+    width: 50%;
+    max-width: 50%;
+
+  }
+
+}
+
+@media screen and (min-width: 1280px) {
+  .play-container-one {
+    
+    max-height: 700px;
+    flex-direction: row;
+    margin-bottom: 0px;
+  }
+  
+  .play-container-two {
+    max-height: 700px;
+    flex-direction: row-reverse;
+    margin-bottom: 183px;
+    
+  }
+
+  .content-play-one {
+    padding-top: 60px;
+    padding-left: 116px;
+    padding-right: 108px;
+    padding-bottom: 4rem;
+  }
+  .content-play-two {
+    padding-top: 60px;
+    padding-left: 108px;
+    padding-right: 116px;
+    padding-bottom: 4rem;
+  }
+}
+
+@media screen and (min-width: 1600px) { 
+  .sec-play {
+    margin: auto;
+    width: 90%;
+  }
+
+  .sec-story {
+    margin: auto;
+    width: 90%;
+  }
+}
+
+@media screen and (min-width: 1920px) { 
+  .sec-play {
+    margin: auto;
+    width: 75%;
+  }
+
+  .sec-story {
+    margin: auto;
+    width: 75%;
+  }
+}
 
 /* -- FOOTER -- */
 .footer {
+  height: fit-content;
   background-color: #011827;
   display: flex;
   justify-content: center;
@@ -617,7 +727,7 @@ body {
     margin-top: 146px;
     margin-right: 200px;
     margin-bottom: 174px;
-    margin-left: 108px;
+    margin-left: 180px;
   }
 
   .footer-title-p {
@@ -633,7 +743,39 @@ body {
   }
 
   .footer-site-map {
-    margin-right: 141px;
+    width: 200px;
+    margin-right: 20px;
+    margin-left: 100px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .footer-site-map {
+    margin-right: 40px;
+  }
+
+  .container-footer {
+    margin-left: 108px;
+  }
+}
+@media (min-width: 1600px) {
+  .container-footer {
+    margin-left: 100px;
+    margin-right: 200px;
+  }
+}
+
+@media (min-width: 1710px) {
+  .container-footer {
+    margin-left: 200px;
+    margin-right: 300px;
+  }
+}
+
+@media (min-width: 1920px) {
+  .container-footer {
+    margin-left: 300px;
+    margin-right: 400px;
   }
 }
 
