--- a/main.css
+++ b/main.css
@@ -91,7 +91,7 @@ body {
 .container-hacker {
   width: 100%;
   height: 274px;
-  background-image: url(/media/hacker4x.png);
+  background-image: url(media/hacker4x.png);
   background-size: cover;
 }
 
@@ -104,20 +104,20 @@ body {
 @media (min-width: 900px) {
   .container-hacker {
     height: 400px;
-    background-image: url(/media/hacker3x.png);
+    background-image: url(media/hacker3x.png);
     
   }
 }
 @media (min-width: 1000px) {
   .container-hacker {
     height: 440px;
-    background-image: url(/media/hacker2x.png);
+    background-image: url(media/hacker2x.png);
   }
 }
 @media (min-width: 1280px) {
   .container-hacker {
     height: 468px;
-    background-image: url(/media/hacker2x.png);
+    background-image: url(media/hacker2x.png);
   }
 }
 @media (min-width: 1920px) {
