--- a/main.css
+++ b/main.css
@@ -259,7 +259,7 @@ body {
 
 /* -- SEC-SCROLLBAR -- */
 .title-scrollbar {
-  font-size: 32px;
+  font-size: 30px;
   font-weight: 400;
   display: flex;
   justify-content: center;
@@ -346,23 +346,31 @@ body {
 .box-button {
   min-width: 179px;
   max-width: 179px;
+  height: 44px;
+  max-height: 44px;
   background-color: #e3170a;
   color: white;
   font-size: 16px;
   font-weight: 700;
   border: none;
   border-radius: 4px;
-  padding: 15px;
-  margin-top: 5px;
   margin-left: 165px;
-  max-height: 44px;
+  margin-bottom: 10px;
+  
+  
+}
+
+@media (min-width: 480px) {
+  .title-scrollbar {
+    font-size: 32px;
+  }
 }
 
 @media (min-width: 1280px) {
   .scrollbar {
     justify-content: center;
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; 
+    scrollbar-width: none;
     gap: 42px;
     margin-bottom: 70px;
   }
@@ -408,6 +416,7 @@ body {
 /* -- SEC-STORY -- */
 .container-story {
   height: 500px;
+  width: 100%;
   background-color: #011827;
   display: flex;
   justify-content: center;
@@ -535,6 +544,7 @@ body {
   border-radius: 4px;
   border: none;
 }
+
 @media (min-width: 700px) {
   .img-play-one {
    max-height: 489px;
@@ -613,30 +623,6 @@ body {
     padding-left: 108px;
     padding-right: 116px;
     padding-bottom: 4rem;
-  }
-}
-
-@media screen and (min-width: 1600px) { 
-  .sec-play {
-    margin: auto;
-    width: 90%;
-  }
-
-  .sec-story {
-    margin: auto;
-    width: 90%;
-  }
-}
-
-@media screen and (min-width: 1920px) { 
-  .sec-play {
-    margin: auto;
-    width: 75%;
-  }
-
-  .sec-story {
-    margin: auto;
-    width: 75%;
   }
 }
 
