--- a/main.css
+++ b/main.css
@@ -46,25 +46,83 @@ body {
 }
 
 .header-navbar {
-  display: flex;
   display: none;
-  flex-direction: row;
+}
+
+/* -- MOBILEMENU */
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes bg-grow {
+  0% {
+    transform: scale(90%);
+  }
+  100% {
+    transform: scale(100%);
+  }
+}
+
+.container-mobilemenu {
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  background-color: #FFFFFF80;
+  z-index: 1;
+  animation: fade ease 0.3s;
+}
+
+.bg-mobilemenu {
+  display: none;
+  background-color: #011827;
+  position: fixed;
+  z-index: 2;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 50px;
+  top: 23px;
+  left: 20px;
+  right: 20px;
+  bottom: 23px;
+  animation: bg-grow 0.3s linear;
+}
+
+.button-open {
+  background: none;
+  border: none;
+  margin-left: auto;
+  margin-right: 15px;
+  margin-bottom: 84px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.button-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
   margin-top: 25px;
-  margin-bottom: 22px;
-  width: 60%;
+  margin-right: 23px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  animation: fade 0.2s ease-out;
 }
 
-.header-navbar a {
-  font-size: 24px;
+.nav-links {
+  font-size: 36px;
   font-weight: 700;
-  color: white;
   text-decoration: none;
-}
-
-.header-navbar a:hover {
-  color: #8acfe5;
+  color: white;
 }
 
 @media (min-width: 900px) {
@@ -76,6 +134,23 @@ body {
 
   .header-navbar {
     display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 25px;
+    margin-bottom: 22px;
+    width: 60%;
+  }
+
+  .header-navbar a {
+    font-size: 24px;
+    font-weight: 700;
+    color: white;
+    text-decoration: none;
+  }
+
+  .header-navbar a:hover {
+    color: #8acfe5;
   }
 }
 
