--- a/main.css
+++ b/main.css
@@ -77,7 +77,7 @@ body {
   top: 0;
   background-color: #FFFFFF80;
   z-index: 1;
-  animation: fade ease 0.3s;
+  animation: fade 0.2s linear;
 }
 
 .bg-mobilemenu {
@@ -93,7 +93,7 @@ body {
   left: 20px;
   right: 20px;
   bottom: 23px;
-  animation: bg-grow 0.3s linear;
+  animation: bg-grow 0.3s ease;
 }
 
 .button-open {
