--- a/main.css
+++ b/main.css
@@ -63,9 +63,11 @@ body {
 @keyframes bg-grow {
   0% {
     transform: scale(90%);
+    opacity: 0;
   }
   100% {
     transform: scale(100%);
+    opacity: 1;
   }
 }
 
@@ -77,7 +79,7 @@ body {
   top: 0;
   background-color: #FFFFFF80;
   z-index: 1;
-  animation: fade 0.2s linear;
+  animation: fade 0.2s ease;
 }
 
 .bg-mobilemenu {
@@ -93,7 +95,7 @@ body {
   left: 20px;
   right: 20px;
   bottom: 23px;
-  animation: bg-grow 0.3s ease;
+  animation: bg-grow 0.4s ease;
 }
 
 .button-open {
@@ -115,7 +117,7 @@ body {
   background: none;
   border: none;
   cursor: pointer;
-  animation: fade 0.2s ease-out;
+  animation: fade 0.25s step-end;
 }
 
 .nav-links {
@@ -151,6 +153,10 @@ body {
 
   .header-navbar a:hover {
     color: #8acfe5;
+  }
+
+  .button-open {
+    display: none;
   }
 }
 
