--- a/main.css
+++ b/main.css
@@ -79,7 +79,7 @@ body {
   top: 0;
   background-color: #FFFFFF80;
   z-index: 1;
-  animation: fade 0.2s ease;
+  animation: fade 0.1s linear;
 }
 
 .bg-mobilemenu {
@@ -95,7 +95,7 @@ body {
   left: 20px;
   right: 20px;
   bottom: 23px;
-  animation: bg-grow 0.4s ease;
+  animation: bg-grow 0.3s ease-out;
 }
 
 .button-open {
